@@ -4,15 +4,17 @@ import com.quorum.tessera.cli.CliResult;
 import com.quorum.tessera.cli.parsers.ConfigConverter;
 import com.quorum.tessera.config.CommunicationType;
 import com.quorum.tessera.config.Config;
+import com.quorum.tessera.config.ConfigFactory;
 import com.quorum.tessera.config.ServerConfig;
 import com.quorum.tessera.enclave.Enclave;
-import com.quorum.tessera.enclave.EnclaveFactory;
+import com.quorum.tessera.enclave.EnclaveServer;
 import com.quorum.tessera.enclave.server.EnclaveCliAdapter;
 import com.quorum.tessera.server.TesseraServer;
 import com.quorum.tessera.server.TesseraServerFactory;
-import java.util.Collections;
-import java.util.Objects;
+import java.security.Security;
+import java.util.Set;
 import java.util.concurrent.CountDownLatch;
+import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import picocli.CommandLine;
@@ -22,11 +24,7 @@ public class Main {
   private static final Logger LOGGER = LoggerFactory.getLogger(Main.class);
 
   public static void main(String... args) throws Exception {
-    System.setProperty(
-        "javax.xml.bind.JAXBContextFactory", "org.eclipse.persistence.jaxb.JAXBContextFactory");
-    System.setProperty(
-        "javax.xml.bind.context.factory", "org.eclipse.persistence.jaxb.JAXBContextFactory");
-
+    Security.addProvider(new BouncyCastleProvider());
     final CommandLine commandLine = new CommandLine(new EnclaveCliAdapter());
     commandLine
         .registerConverter(Config.class, new ConfigConverter())
@@ -36,11 +34,7 @@ public class Main {
     commandLine.execute(args);
     final CliResult cliResult = commandLine.getExecutionResult();
 
-    if (Objects.isNull(cliResult)) {
-      System.exit(1);
-    }
-
-    if (cliResult.getConfig().isEmpty()) {
+    if (!cliResult.getConfig().isPresent()) {
       System.exit(cliResult.getStatus());
     }
 
@@ -49,16 +43,13 @@ public class Main {
 
     final Config config = cliResult.getConfig().get();
 
-    final Enclave enclave = EnclaveFactory.createServer(config);
-
-    final EnclaveResource enclaveResource = new EnclaveResource(enclave);
-
-    final EnclaveApplication application = new EnclaveApplication(enclaveResource);
+    ConfigFactory.create().store(config);
 
     final ServerConfig serverConfig = config.getServerConfigs().stream().findFirst().get();
-
+    Enclave enclave = EnclaveServer.create();
+    LOGGER.debug("Created enclave {}", enclave);
     final TesseraServer server =
-        restServerFactory.createServer(serverConfig, Collections.singleton(application));
+        restServerFactory.createServer(serverConfig, Set.of(new EnclaveApplication(enclave)));
     server.start();
 
     CountDownLatch latch = new CountDownLatch(1);
